--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,7 @@
 .section-heading {
   @apply font-unbounded font-bold text-color-accent-primary text-[28px] leading-[1.2] tracking-[1.12px] uppercase;
 }
+
+.container {
+  outline: 2px dotted green;
+}
