--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,20 @@
 .container {
   outline: 2px dotted green;
 }
+
+.crumbs-bg-sm {
+  background-image: url("/images/crumbs-sm-@x2.webp");
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+  (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi) and (max-width: 767px),
+  (min-resolution: 2dppx) and (max-width: 767px) {
+  .crumbs-bg-sm {
+    background-image: url("/images/crumbs-sm-@x2.webp");
+  }
+}
+
+.crumbs {
+  @apply crumbs-bg-sm bg-cover bg-center;
+}
