--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   .section {
-    @apply pt-[60px] md:pt-[80px];
+    @apply pt-[60px] md:pt-[80px] xl:pt-[120px];
   }
   .flex-center {
     @apply flex justify-center items-center;
@@ -18,7 +18,6 @@
 }
 
 /* Common utilities: */
-
 .section-heading {
   @apply font-unbounded font-bold text-color-accent-primary text-[28px] leading-[1.2] tracking-[1.12px] uppercase;
 }
