add disabled btn styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,8 +34,11 @@
   @apply absolute top-0 left-0 w-full h-[3px] bg-color-accent-primary;
 }
 /* sliderNav */
+.slider-button {
+  @apply w-[60px] h-[60px] border-2 text-base leading-loose hover:shadow-2xl focus-visible:shadow-2xl md:hover:shadow-3xl md:focus-visible:shadow-3xl transition rounded-full flex-center border-color-accent-primary bg-color-bg-white hover:translate-x-[2px] hover:-translate-y-[2px] md:hover:translate-x-[3px] md:hover:-translate-y-[3px] focus-visible:translate-x-[2px] focus-visible:-translate-y-[2px] md:focus-visible:translate-x-[3px] md:focus-visible:-translate-y-[3px];
+}
 
 .button-next-top.swiper-button-disabled,
 .button-prev-top.swiper-button-disabled {
-  background-color: black;
+  @apply pointer-events-none opacity-50;
 }
