add hover focus changes to the nav btns

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,10 +35,10 @@
 }
 /* sliderNav */
 .slider-button {
-  @apply w-[60px] h-[60px] border-2 text-base leading-loose hover:shadow-2xl focus-visible:shadow-2xl md:hover:shadow-3xl md:focus-visible:shadow-3xl transition rounded-full flex-center border-color-accent-primary bg-color-bg-white hover:translate-x-[2px] hover:-translate-y-[2px] md:hover:translate-x-[3px] md:hover:-translate-y-[3px] focus-visible:translate-x-[2px] focus-visible:-translate-y-[2px] md:focus-visible:translate-x-[3px] md:focus-visible:-translate-y-[3px];
+  @apply w-[60px] h-[60px] border-2 text-base leading-loose hover:shadow-xl focus-visible:shadow-xl md:hover:shadow-xl md:focus-visible:shadow-xl transition rounded-full flex-center border-color-accent-primary bg-color-bg-white hover:translate-x-[2px] hover:-translate-y-[2px] md:hover:translate-x-[3px] md:hover:-translate-y-[3px] focus-visible:translate-x-[2px] focus-visible:-translate-y-[2px] md:focus-visible:translate-x-[3px] md:focus-visible:-translate-y-[3px];
 }
 
-.button-next-top.swiper-button-disabled,
-.button-prev-top.swiper-button-disabled {
-  @apply pointer-events-none opacity-50;
+.button-next-toppings.swiper-button-disabled,
+.button-prev-toppings.swiper-button-disabled {
+  @apply pointer-events-none opacity-0;
 }
