add achievements section, add global style, slider small fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,7 @@
 .button-prev-toppings.swiper-button-disabled {
   @apply pointer-events-none opacity-0;
 }
+
+.swiper-slide.achievement-slide {
+  @apply smOnly:!w-full;
+}
