--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,15 @@
   .flex-start {
     @apply flex justify-start items-center;
   }
+  .input-reset {
+    @apply [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none;
+  }
+  .test {
+    display: grid;
+    gap: 16px;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-auto-flow: column;
+  }
 }
 
 /* Common utilities: */
