--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,13 @@
     @apply [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none;
   }
   .input-field {
-    @apply w-full border rounded-lg px-4 text-left font-fixel [:where(&)]:border-alto text-base placeholder-silver;
+    @apply w-full border rounded-lg px-4 text-left font-fixel [:where(&)]:border-alto text-base placeholder-silver disabled:placeholder-gallery;
+  }
+  .hover-style {
+    @apply hover:shadow-2xl focus:shadow-2xl md:hover:shadow-3xl md:focus:shadow-3xl transition border-color-accent-primary   bg-color-bg-white hover:translate-x-[2px] hover:-translate-y-[2px] md:hover:translate-x-[3px] md:hover:-translate-y-[3px] focus:translate-x-[2px] focus:-translate-y-[2px] md:focus:translate-x-[3px] md:focus:-translate-y-[3px];
   }
   .submit-button {
-    @apply text-title block w-full md:w-[368px] md:mx-auto py-[14px] rounded-[36px] border-color-accent-primary border-2 leading-8;
+    @apply text-title block w-full md:w-[368px] md:mx-auto py-[14px] rounded-[36px] hover-style border-2 leading-8;
   }
 }
 
