--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,7 +136,7 @@
 }
 
 .sweets-card-title_cookies {
-  @apply text-color-option-first;
+  @apply text-color-option-sixth;
 }
 
 .sweets-card-title_cupcakes {
